fixed information not showing

--- a/logins/signup-styles.css
+++ b/logins/signup-styles.css
@@ -67,5 +67,5 @@ button {
   float: left;
   width: 30vw;
   margin-top: 10vw;
-  margin-left: 5.8vw;
+  margin-left: 2vw;
 }
